--- a/freeswitch/centos/Dockerfile
+++ b/freeswitch/centos/Dockerfile
@@ -125,8 +125,8 @@ RUN cd /usr/src/luasocket-$LUASOCKET_VERSION \
     && make && make install
 
 # lua-iconv
-RUN cd /usr/src/lua-iconv \
-    && make && make install
+#RUN cd /usr/src/lua-iconv \
+#    && make && make install
 
 # lua-bitop
 RUN cd /usr/src/luabitop \
