--- a/freeswitch/bullseye/Dockerfile
+++ b/freeswitch/bullseye/Dockerfile
@@ -37,9 +37,9 @@ RUN DEBIAN_FRONTEND=noninteractive apt-get -yq install \
 # mod_av
     libavformat-dev libswscale-dev libavresample-dev \
 # mod_lua
-#    lua5.2 liblua5.2-dev \
+    lua5.1 liblua5.1-dev \
 # luasocket
-#    lua-socket \
+    lua-socket \
 # lua-iconv
     lua-iconv \
 # lua-bitop
