--- a/freeswitch/bullseye_lua5.2/Dockerfile
+++ b/freeswitch/bullseye_lua5.2/Dockerfile
@@ -86,6 +86,7 @@ RUN export PKG_CONFIG_PATH=/usr/lib/pkgconfig:/usr/local/lib/pkgconfig:\$PKG_CON
     && sed -i "/^#endpoints\/mod_portaudio$/s/^#//" modules.conf \
     && sed -i "/^#asr_tts\/mod_flite$/s/^#//" modules.conf \
     && sed -i "/^#languages\/mod_python3$/s/^#//" modules.conf \
+    && sed -i "/^#event_handlers\/mod_cdr_pg_csv$/s/^#//" modules.conf \
     && ./configure --bindir=/usr/bin --enable-core-odbc-support \
     && make -j `nproc` && make install \
     && make mod_portaudio \
