--- a/freeswitch/bullseye_lua5.1/Dockerfile
+++ b/freeswitch/bullseye_lua5.1/Dockerfile
@@ -87,6 +87,7 @@ RUN set -eux; \
       && sed -i "/^#asr_tts\/mod_flite$/s/^#//" modules.conf \
       && sed -i "/^#languages\/mod_python3$/s/^#//" modules.conf \
       && sed -i "/^#event_handlers\/mod_cdr_pg_csv$/s/^#//" modules.conf \
+      && sed -i "/^#xml_int\/mod_xml_curl$/s/^#//" modules.conf \
       && ./configure --bindir=/usr/bin --enable-core-odbc-support \
       && make -j `nproc` && make install \
       && make mod_portaudio \
