--- a/freeswitch/bullseye_lua5.1/Dockerfile
+++ b/freeswitch/bullseye_lua5.1/Dockerfile
@@ -8,19 +8,19 @@ ARG FREESWITCH_VERSION=1.10.9
 # explicitly set user/group IDs
 RUN set -eux; \
       groupadd -r freeswitch --gid=999 && useradd -r -g freeswitch --uid=999 freeswitch; \
-      apt-get update && DEBIAN_FRONTEND=noninteractive apt-get -yq install git lsb-release wget iproute2 sngrep dirmngr gnupg2 ca-certificates;
-      
-RUN   wget https://github.com/signalwire/freeswitch/archive/refs/tags/v$FREESWITCH_VERSION.tar.gz -P /usr/src/ && tar zxf /usr/src/v$FREESWITCH_VERSION.tar.gz -C /usr/src;
-RUN   git clone https://github.com/signalwire/libks /usr/src/libs/libks;
-RUN   git clone https://github.com/freeswitch/sofia-sip /usr/src/libs/sofia-sip;
-RUN   git clone https://github.com/freeswitch/spandsp /usr/src/libs/spandsp;
-RUN   wget https://www.unimrcp.org/project/component-view/unimrcp-deps-1-6-0-tar-gz/download -O /usr/src/unimrcp-deps-1.6.0.tar.gz;
-RUN   git clone https://github.com/unispeech/unimrcp.git /usr/src/unimrcp;
-RUN   git clone https://github.com/freeswitch/mod_unimrcp.git /usr/src/mod_unimrcp;
+      apt-get update && DEBIAN_FRONTEND=noninteractive apt-get -yq install git lsb-release wget iproute2 sngrep dirmngr gnupg2 ca-certificates; \
+      \
+      wget https://github.com/signalwire/freeswitch/archive/refs/tags/v$FREESWITCH_VERSION.tar.gz -P /usr/src/ && tar zxf /usr/src/v$FREESWITCH_VERSION.tar.gz -C /usr/src; \
+      git clone https://github.com/signalwire/libks /usr/src/libs/libks; \
+      git clone https://github.com/freeswitch/sofia-sip /usr/src/libs/sofia-sip; \
+      git clone https://github.com/freeswitch/spandsp /usr/src/libs/spandsp; \
+      wget https://www.unimrcp.org/project/component-view/unimrcp-deps-1-6-0-tar-gz/download -O /usr/src/unimrcp-deps-1.6.0.tar.gz; \
+      git clone https://github.com/unispeech/unimrcp.git /usr/src/unimrcp; \
+      git clone https://github.com/freeswitch/mod_unimrcp.git /usr/src/mod_unimrcp; \
 #RUN git clone https://github.com/signalwire/signalwire-c /usr/src/libs/signalwire-c
 #RUN git clone https://github.com/signalwire/freeswitch /usr/src/freeswitch
-      
-RUN      DEBIAN_FRONTEND=noninteractive apt-get -yq install \
+      \
+      DEBIAN_FRONTEND=noninteractive apt-get -yq install \
 # build
         build-essential cmake automake autoconf 'libtool-bin|libtool' pkg-config \
 # general
