--- a/freeswitch/bullseye_lua5.1/Dockerfile
+++ b/freeswitch/bullseye_lua5.1/Dockerfile
@@ -17,6 +17,7 @@ RUN set -eux; \
       wget https://www.unimrcp.org/project/component-view/unimrcp-deps-1-6-0-tar-gz/download -O /usr/src/unimrcp-deps-1.6.0.tar.gz; \
       git clone https://github.com/unispeech/unimrcp.git /usr/src/unimrcp; \
       git clone https://github.com/freeswitch/mod_unimrcp.git /usr/src/mod_unimrcp; \
+      wget https://www.python.org/ftp/python/3.11.4/Python-3.11.4.tgz -P /usr/src/ && tar zxf /usr/src/Python-3.11.4.tgz -C /usr/src/; \
 #RUN git clone https://github.com/signalwire/signalwire-c /usr/src/libs/signalwire-c
 #RUN git clone https://github.com/signalwire/freeswitch /usr/src/freeswitch
       \
@@ -137,6 +138,12 @@ RUN set -eux; \
       && export PKG_CONFIG_PATH=/usr/lib/pkgconfig:/usr/local/lib/pkgconfig:/usr/local/freeswitch/lib/pkgconfig:/usr/local/unimrcp/lib/pkgconfig:\$PKG_CONFIG_PATH \
       && ldconfig \
       && ./bootstrap.sh && ./configure && make && make install; \
+    \
+# python3.11
+    cd /usr/src \
+      && cd Python-3.11.4 \
+      && ./configure --prefix=/opt/python-3.11.4 \
+      && make && make install; \
     \
 #    chown -R freeswitch:freeswitch /usr/local/freeswitch; \
     \
